@@ -1645,6 +1645,32 @@ Browser-DesktopMSIE-4-5-0
 BrowserEngine-Trident
 BrowserOS-MacOS
 
+# Internet Explorer 5.0 on Mac PPC
+Mozilla/4.0 (compatible; MSIE 5.0; Mac_PowerPC)
+Device-Desktop
+Device-NoPhone
+Browser-MSIE
+Browser-DesktopMSIE
+Browser-DesktopMSIE-5
+Browser-DesktopMSIE-5-0
+Browser-DesktopMSIE-5-0-0
+BrowserEngine-Tasman
+BrowserOS-MacOS
+
+# Internet Explorer 5.0 on Mac OS X
+Mozilla/4.0 (compatible; MSIE 5.0; Mac OS X)
+Device-Desktop
+Device-NoPhone
+Browser-MSIE
+Browser-DesktopMSIE
+Browser-DesktopMSIE-5
+Browser-DesktopMSIE-5-0
+Browser-DesktopMSIE-5-0-0
+BrowserEngine-Tasman
+BrowserOS-NIX
+BrowserOS-MacOS
+BrowserOS-MacOS-10
+
 # Internet Explorer 5.0 on Windows 98
 Mozilla/4.0(compatible; MSIE 5.0; Windows 98; DigExt)
 Device-Desktop
